--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/ckeditor": "^4.9.10",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ng2-ckeditor-12": "^1.3.3",
     "ngx-ckeditor": "^10.0.0",
     "rxjs": "~6.6.0",
