--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.6.0",
     "ng2-ckeditor-12": "^1.3.3",
     "ngx-ckeditor": "^10.0.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
